--- a/package.json
+++ b/package.json
@@ -20,12 +20,37 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.12.0",
+    "@ionic-native/camera": "^4.12.2",
+    "@ionic-native/core": "^4.12.2",
+    "@ionic-native/file": "^4.12.2",
+    "@ionic-native/file-path": "^4.12.2",
+    "@ionic-native/file-transfer": "^4.12.2",
+    "@ionic-native/geolocation": "^4.12.2",
+    "@ionic-native/google-maps": "^4.13.0",
+    "@ionic-native/native-audio": "^4.12.2",
+    "@ionic-native/push": "^4.12.2",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic-native/vibration": "^4.12.2",
     "@ionic/storage": "2.1.3",
+    "call-number": "^1.0.1",
+    "cordova-android": "7.1.0",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googlemaps": "^2.4.3",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-nativeaudio": "^3.0.9",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "^3.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.1.0",
     "ionic-angular": "3.9.2",
+    "ionic2-super-tabs": "^4.3.0",
     "ionicons": "3.0.0",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -34,5 +59,30 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "11.6.2"
+      },
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyAaXtEL8qKgaotv4fw8T0XCEcTNmV2pmL0",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
